fix safari flex stretch

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -73,9 +73,8 @@ h1 {
 .photo.container {
   margin: 0.5rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
 }
 .photo.me {
   width: 60%;
